# sdl2-cs-bindings

./: .gitattributes  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  Janset.SDL2.sln  LICENSE  README.md  build.ps1  build.sh  global.json  tools.cs  vcpkg.json
.github/prompts/: dependency_modernization_and_net_10_updater_prompt_v_1.prompt.md  general-deep-dive-code-reviewer.prompt.md  northstar-adr003-implementation-plan-reviewer.prompt.md  s1-post-validation-continuation.prompt.md  s1-review-handover-prompt-2026-04-18.prompt.md  s1-staged-code-review-and-reverify.prompt.md  s10-adr003-slice-c-closure.prompt.md  s11-slice-e-followup-continuation.prompt.md  s12-slice-e-ci-polish-continuation.prompt.md  s13-slice-e-ci-polish-continuation.prompt.md  s14-slice-e-ci-polish-continuation.prompt.md  s15-phase-2b-tail-kickoff.prompt.md  s16-phase-2b-post-green-ci-pickup.prompt.md  s17-phase-2b-public-release-pickup.prompt.md  s18-phase-x-p2-close-adim13-pickup.prompt.md  s19-adim13-close-p3-entry-pickup.prompt.md  s2-post-h1-continuation.prompt.md  s20-p4-a-close-code-review.prompt.md  s21-p4-a-close-p4-c-entry-pickup.prompt.md  s3-post-adr001-continuation.prompt.md  s4-harvest-nativeless-review-continuation.prompt.md  s5-ddd-layering-post-adr002-continuation.prompt.md  s6-adr003-cake-refactor-plan-first.prompt.md  s7-adr003-slice-d-to-e-continuation.prompt.md  s8-adr003-slice-b2-continuation.prompt.md  s9-adr003-slice-c-continuation.prompt.md
.github/workflows/: build-linux-container.yml  build.yml  prepare-native-assets-linux.yml  prepare-native-assets-macos.yml  prepare-native-assets-main.yml  prepare-native-assets-windows.yml  release-candidate-pipeline.yml  release.yml
.graphify-patch/: README.md  patch-graphify.ps1
docker/: .dockerignore  linux-builder.Dockerfile
docs/: Cake Frosting Build Expertise_.md  README.md  architectural-review-core-components.md  architectural-review.md  cake-build-plan.md  ci-cd-packaging-and-release-plan.md  onboarding.md  parking-lot.md  plan.md  producing-artifacts.md  source-generator-design.md
docs/_archive/: README.md  ci-cd-packaging-and-release-plan-2026-04-25.md  ci-troubleshooting-2026-04-25.md  phase-2-adaptation-plan-2026-04-15.md
docs/archive/: Cake Frosting Build Expertise_.md  architectural-review-core-components.md  architectural-review.md  cake-build-plan.md  source-generator-implementation-summary.md
docs/decisions/: 2026-04-18-versioning-d3seg.md  2026-04-19-ddd-layering-build-host.md  2026-04-20-release-lifecycle-orchestration.md  2026-05-02-cake-native-feature-architecture.md
docs/knowledge-base/: cake-build-architecture.md  ci-cd-packaging-and-release-plan.md  design-decisions-and-tradeoffs.md  harvesting-process.md  release-guardrails.md  release-lifecycle-direction.md
docs/notes/: refactor-opportunities-2026-04-15.md  test-infra-modernization-plan-2026-04-15.md
docs/phases/: README.md  phase-1-sdl2-bindings.md  phase-2-adaptation-plan.md  phase-2-cicd-packaging.md  phase-2-release-cycle-orchestration-implementation-plan.md  phase-3-sdl2-complete.md  phase-4-binding-autogen.md  phase-5-sdl3-support.md  phase-x-build-host-modernization-2026-05-02.md  phase-x-lightweight-dotnet-update.md  phase-x-modernization-2026-04-20.md  phase-y-dev-tools-extraction-2026-05-03.md
docs/playbook/: TEMP-macos-smoke-commands.md  TEMP-wsl-smoke-commands.md  adding-new-library.md  cake-frosting-host-organization.md  cake-frosting-patterns.md  ci-troubleshooting.md  cross-platform-smoke-validation.md  graphify-runbook.md  local-development.md  overlay-management.md  unix-smoke-runbook.md  vcpkg-update.md
docs/reference/: cake-frosting-build-expertise.md
docs/research/: binding-autogen-approaches.md  cake-strategy-implementation-brief-2026-04-14.md  cake-testing-strategy-2026-04-14.md  ci-matrix-strategy-review-2026-04-17.md  exact-pin-spike-and-nugetizer-eval-2026-04-16.md  execution-model-strategy-2026-04-13.md  full-train-release-orchestration-2026-04-16.md  lgpl-free-codec-migration-2026-04-14.md  license-inventory-2026-04-13.md  native-packaging-comparative-analysis-2026-04-13.md  native-packaging-patterns.md  packaging-strategy-hybrid-static-2026-04-13.md  packaging-strategy-pure-dynamic-2026-04-13.md  packaging-strategy-synthesis-2026-04-13-copilot.md  packaging-strategy-verdict-2026-04-14-claude-2.md  release-lifecycle-patterns-2026-04-14-claude-opus.md  (+9 more)
scripts/: package_sdl2_artifacts.ps1  package_sdl2_artifacts.sh
src/: Directory.Build.props  Directory.Build.targets
tests/smoke-tests/native-smoke/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  build.bat  main.c
vcpkg-overlay-ports/: README.md
vcpkg-overlay-triplets/: README.md  _hybrid-common.cmake  arm64-linux-hybrid.cmake  arm64-osx-hybrid.cmake  arm64-windows-hybrid.cmake  x64-linux-hybrid.cmake  x64-osx-hybrid.cmake  x64-windows-hybrid.cmake  x86-windows-hybrid.cmake
(+83 files in other folders)
